--- a/www/css/index.css
+++ b/www/css/index.css
@@ -42,6 +42,7 @@ body {
     padding: 0px;
     width: 100%;
     color: #FFFFFF;
+    margin-bottom: 32px;
 }
 
 h1 {
@@ -222,17 +223,15 @@ a {
 }
 
 .body {
-    position: absolute;
-    top: 12px;
-    bottom: 32px;
-    right: 12px;
-    left: 12px;
+    position: relative;
     z-index: 1;
+    margin: 12px;
     padding: 12px;
     background-color: #F0F0F0;
     color: #8A8A8A;
     border: 2px #B9B9B9 solid;
     border-radius: 16px;
+    margin-bottom: 32px;
 }
 
 .body-event {
