--- a/www/css/index.css
+++ b/www/css/index.css
@@ -123,7 +123,7 @@ a {
     padding: 8px;
     background-color: #4C3327;
     border-radius: 0px 16px 16px 0px;
-    z-index: 2;
+    z-index: 999;
 }
 
 .button {
@@ -224,7 +224,6 @@ a {
 .body {
     position: absolute;
     top: 12px;
-    bottom: 32px;
     left: 12px;
     right: 12px;
     z-index: 1;
@@ -233,6 +232,11 @@ a {
     color: #8A8A8A;
     border: 2px #B9B9B9 solid;
     border-radius: 16px;
+    height: 100%;
+}
+
+.body:after {
+    content: "<div style='height: 32px'></div>";
 }
 
 .body-event {
