--- a/www/css/index.css
+++ b/www/css/index.css
@@ -222,21 +222,14 @@ a {
 }
 
 .body {
-    position: absolute;
-    top: 12px;
-    left: 12px;
+    position: relative;
     z-index: 1;
     padding: 12px;
     background-color: #F0F0F0;
     color: #8A8A8A;
     border: 2px #B9B9B9 solid;
     border-radius: 16px;
-    height: 100%;
-    width: 100%;
-}
-
-.body:after {
-    padding-bottom: 32px;
+    margin: 12px;
 }
 
 .body-event {
@@ -245,7 +238,7 @@ a {
     background-repeat: no-repeat;
     background-position: center bottom;
     position: relative;
-
+    height: 100%;
 }
 
 .body-event div {
