--- a/www/css/index.css
+++ b/www/css/index.css
@@ -35,7 +35,7 @@ body {
     background-position: bottom left;
     background-repeat: no-repeat;
     background-attachment: fixed;
-    font-family: 'HelveticaNeue-Light', 'HelveticaNeue', Helvetica, Arial, sans-serif;
+    font-family: sans-serif;
     font-size: 12px;
     height: 100%;
     margin: 0px;
